--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/shaack/bootstrap-input-spinner.git"
   },
   "keywords": [
+    "Bootstrap 4",
     "Bootstrap",
     "jQuery",
     "Input",
