--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bootstrap-input-spinner",
   "version": "1.5.19",
   "description": "A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.",
-  "main": "src/bootstrap-input-spinner/InputSpinner.js",
+  "main": "src/InputSpinner.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/shaack/bootstrap-input-spinner#readme",
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
   }
