--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bootstrap-input-spinner",
   "version": "1.5.19",
   "description": "A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.",
-  "main": "src/InputSpinner.js",
+  "main": "src/bootstrap-input-spinner.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
