--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
+  },
+  "devDependencies": {
+    "prismjs": "^1.15.0"
   }
 }
