--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "Input",
     "UI"
   ],
-  "author": "Stefan Haack <shaack@gmail.com> (http://www.shaack.com)",
+  "author": "https://shaack.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shaack/bootstrap-input-spinner/issues"
