--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.",
   "browser": "./src/bootstrap-input-spinner.js",
   "scripts": {
-    "test": "tput setaf 4;echo 'No test specified'; echo''; exit 0"
+    "test": "tput setaf 4;echo open ./test/index.html in your browser for testing."
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,8 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3",
     "prismjs": "^1.21.0"
   }
 }
