--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.",
   "browser": "./src/bootstrap-input-spinner.js",
   "scripts": {
-    "test": "tput setaf 4;echo open ./test/index.html in your browser for testing."
+    "test": "tput setaf 4;echo open test/test.html in your browser for testing."
   },
   "repository": {
     "type": "git",
