--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-src/bootstrap-input-spinner.js linguist-vendored=false
+src/input-spinner.js linguist-vendored=false
 index.html linguist-documentation
