New es6 module beta version under `/src/es6-beta`.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-src/bootstrap-input-spinner.js linguist-vendored=false
+src/InputSpinner.js linguist-vendored=false
 index.html linguist-documentation
